set(
	SGE_IMAGE_FILES
	libs/image/impl/include/sge/image/impl/algorithm/clone_impl.hpp
	libs/image/impl/include/sge/image/impl/algorithm/compare_element.hpp
	libs/image/impl/include/sge/image/impl/algorithm/compare_impl.hpp
	libs/image/impl/include/sge/image/impl/algorithm/compare_visitor.hpp
	libs/image/impl/include/sge/image/impl/algorithm/convert_may_overlap.hpp
	libs/image/impl/include/sge/image/impl/algorithm/convert_uninitialized.hpp
	libs/image/impl/include/sge/image/impl/algorithm/copy_and_convert_dynamic.hpp
	libs/image/impl/include/sge/image/impl/algorithm/copy_and_convert_impl.hpp
	libs/image/impl/include/sge/image/impl/algorithm/copy_and_convert_static.hpp
	libs/image/impl/include/sge/image/impl/algorithm/copy_impl.hpp
	libs/image/impl/include/sge/image/impl/algorithm/fill_impl.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_clone.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_compare.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_copy.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_copy_and_convert.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_fill.hpp
	libs/image/impl/include/sge/image/impl/algorithm/instantiate_print.hpp
	libs/image/impl/include/sge/image/impl/algorithm/print_impl.hpp
	libs/image/impl/include/sge/image/impl/format_from_static_impl.hpp
	libs/image/impl/include/sge/image/impl/format_key.hpp
	libs/image/impl/include/sge/image/impl/format_map.hpp
	libs/image/impl/include/sge/image/impl/format_pair.hpp
	libs/image/impl/include/sge/image/impl/from_mizuiro_dim.hpp
	libs/image/impl/include/sge/image/impl/instantiate_format_from_static.hpp
	libs/image/impl/include/sge/image/impl/instantiate_invalid_convert.hpp
	libs/image/impl/include/sge/image/impl/instantiate_invalid_copy.hpp
	libs/image/impl/include/sge/image/impl/invalid_convert_impl.hpp
	libs/image/impl/include/sge/image/impl/invalid_copy_impl.hpp
	libs/image/impl/include/sge/image/impl/make_format_pair.hpp
	libs/image/impl/include/sge/image/impl/pixel/convert_impl.hpp
	libs/image/impl/include/sge/image/impl/pixel/instantiate_convert.hpp
	libs/image/impl/include/sge/image/impl/pixel/instantiate_object.hpp
	libs/image/impl/include/sge/image/impl/pixel/instantiate_object_output.hpp
	libs/image/impl/include/sge/image/impl/pixel/object_impl.hpp
	libs/image/impl/include/sge/image/impl/pixel/object_output_impl.hpp
	libs/image/impl/include/sge/image/impl/pixel/to_static_format.hpp
	libs/image/impl/include/sge/image/impl/static_to_dynamic_format.hpp
	libs/image/impl/include/sge/image/impl/store/basic_impl.hpp
	libs/image/impl/include/sge/image/impl/store/instantiate_basic.hpp
	libs/image/impl/include/sge/image/impl/store/instantiate_object.hpp
	libs/image/impl/include/sge/image/impl/store/instantiate_view.hpp
	libs/image/impl/include/sge/image/impl/store/object_impl.hpp
	libs/image/impl/include/sge/image/impl/store/view_any.hpp
	libs/image/impl/include/sge/image/impl/store/view_impl.hpp
	libs/image/impl/include/sge/image/impl/to_mizuiro_dim.hpp
	libs/image/impl/include/sge/image/impl/traits/dynamic_copy_and_convert.hpp
	libs/image/impl/include/sge/image/impl/traits/pixel/format_map.hpp
	libs/image/impl/include/sge/image/impl/traits/pixel/format_map_tpl_fwd.hpp
	libs/image/impl/include/sge/image/impl/traits/static_converter.hpp
	libs/image/impl/include/sge/image/impl/traits/static_converter_tpl_fwd.hpp
	libs/image/impl/include/sge/image/impl/view/checked_sub_any.hpp
	libs/image/impl/include/sge/image/impl/view/checked_sub_condition.hpp
	libs/image/impl/include/sge/image/impl/view/checked_sub_impl.hpp
	libs/image/impl/include/sge/image/impl/view/const_object_impl.hpp
	libs/image/impl/include/sge/image/impl/view/data_any.hpp
	libs/image/impl/include/sge/image/impl/view/data_impl.hpp
	libs/image/impl/include/sge/image/impl/view/flipped_any.hpp
	libs/image/impl/include/sge/image/impl/view/flipped_impl.hpp
	libs/image/impl/include/sge/image/impl/view/format_any.hpp
	libs/image/impl/include/sge/image/impl/view/format_impl.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_checked_sub.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_const_nonconst.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_const_object.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_data.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_flipped.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_format.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_make.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_make_const.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_object.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_pitch.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_size.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_sub.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_sub_out_of_range.hpp
	libs/image/impl/include/sge/image/impl/view/instantiate_to_const.hpp
	libs/image/impl/include/sge/image/impl/view/make_const_impl.hpp
	libs/image/impl/include/sge/image/impl/view/make_impl.hpp
	libs/image/impl/include/sge/image/impl/view/object_impl.hpp
	libs/image/impl/include/sge/image/impl/view/pitch_any.hpp
	libs/image/impl/include/sge/image/impl/view/pitch_impl.hpp
	libs/image/impl/include/sge/image/impl/view/size_any.hpp
	libs/image/impl/include/sge/image/impl/view/size_impl.hpp
	libs/image/impl/include/sge/image/impl/view/sub_any.hpp
	libs/image/impl/include/sge/image/impl/view/sub_impl.hpp
	libs/image/impl/include/sge/image/impl/view/sub_out_of_range_impl.hpp
	libs/image/impl/include/sge/image/impl/view/to_const_impl.hpp
	libs/image/impl/include/sge/image/impl/view/to_static_format.hpp
	libs/image/impl/src/image/impl/algorithm/convert_may_overlap.cpp
	libs/image/impl/src/image/impl/algorithm/convert_uninitialized.cpp
	libs/image/include/sge/image/algorithm/clone.hpp
	libs/image/include/sge/image/algorithm/compare.hpp
	libs/image/include/sge/image/algorithm/copy.hpp
	libs/image/include/sge/image/algorithm/copy_and_convert.hpp
	libs/image/include/sge/image/algorithm/declare_copy.hpp
	libs/image/include/sge/image/algorithm/fill.hpp
	libs/image/include/sge/image/algorithm/may_overlap.hpp
	libs/image/include/sge/image/algorithm/may_overlap_fwd.hpp
	libs/image/include/sge/image/algorithm/print.hpp
	libs/image/include/sge/image/algorithm/uninitialized.hpp
	libs/image/include/sge/image/algorithm/uninitialized_fwd.hpp
	libs/image/include/sge/image/basic_box.hpp
	libs/image/include/sge/image/basic_box_fwd.hpp
	libs/image/include/sge/image/basic_dim.hpp
	libs/image/include/sge/image/basic_dim_fwd.hpp
	libs/image/include/sge/image/basic_pitch.hpp
	libs/image/include/sge/image/basic_pitch_fwd.hpp
	libs/image/include/sge/image/basic_vector.hpp
	libs/image/include/sge/image/basic_vector_fwd.hpp
	libs/image/include/sge/image/box.hpp
	libs/image/include/sge/image/box_fwd.hpp
	libs/image/include/sge/image/channel16.hpp
	libs/image/include/sge/image/channel32.hpp
	libs/image/include/sge/image/channel32f.hpp
	libs/image/include/sge/image/channel8.hpp
	libs/image/include/sge/image/const_raw_pointer.hpp
	libs/image/include/sge/image/declare_format_from_static.hpp
	libs/image/include/sge/image/declare_invalid_convert.hpp
	libs/image/include/sge/image/declare_invalid_copy.hpp
	libs/image/include/sge/image/difference_type.hpp
	libs/image/include/sge/image/dim.hpp
	libs/image/include/sge/image/dim_fwd.hpp
	libs/image/include/sge/image/dimension_count.hpp
	libs/image/include/sge/image/dimension_integral_c.hpp
	libs/image/include/sge/image/enable_if_has_format.hpp
	libs/image/include/sge/image/exception.hpp
	libs/image/include/sge/image/exception_fwd.hpp
	libs/image/include/sge/image/format_from_static.hpp
	libs/image/include/sge/image/has_format.hpp
	libs/image/include/sge/image/heterogenous_format.hpp
	libs/image/include/sge/image/homogenous_format.hpp
	libs/image/include/sge/image/integral_size.hpp
	libs/image/include/sge/image/invalid_convert.hpp
	libs/image/include/sge/image/invalid_convert_fwd.hpp
	libs/image/include/sge/image/invalid_copy.hpp
	libs/image/include/sge/image/invalid_copy_fwd.hpp
	libs/image/include/sge/image/mizuiro_color_traits.hpp
	libs/image/include/sge/image/pitch.hpp
	libs/image/include/sge/image/pitch_fwd.hpp
	libs/image/include/sge/image/pixel/convert.hpp
	libs/image/include/sge/image/pixel/declare_convert.hpp
	libs/image/include/sge/image/pixel/declare_object.hpp
	libs/image/include/sge/image/pixel/elements.hpp
	libs/image/include/sge/image/pixel/mizuiro_type.hpp
	libs/image/include/sge/image/pixel/mizuiro_type_fwd.hpp
	libs/image/include/sge/image/pixel/mizuiro_type_tpl.hpp
	libs/image/include/sge/image/pixel/mizuiro_type_tpl_fwd.hpp
	libs/image/include/sge/image/pixel/object.hpp
	libs/image/include/sge/image/pixel/object_fwd.hpp
	libs/image/include/sge/image/pixel/object_output.hpp
	libs/image/include/sge/image/pixel/print.hpp
	libs/image/include/sge/image/raw_pointer.hpp
	libs/image/include/sge/image/raw_value.hpp
	libs/image/include/sge/image/size_type.hpp
	libs/image/include/sge/image/store/basic.hpp
	libs/image/include/sge/image/store/basic_fwd.hpp
	libs/image/include/sge/image/store/declare_basic.hpp
	libs/image/include/sge/image/store/declare_object.hpp
	libs/image/include/sge/image/store/elements.hpp
	libs/image/include/sge/image/store/object.hpp
	libs/image/include/sge/image/store/object_fwd.hpp
	libs/image/include/sge/image/store/view.hpp
	libs/image/include/sge/image/traits/image/color_tag.hpp
	libs/image/include/sge/image/traits/image/color_tag_tpl_fwd.hpp
	libs/image/include/sge/image/traits/image/dimension.hpp
	libs/image/include/sge/image/traits/image/dimension_tpl_fwd.hpp
	libs/image/include/sge/image/traits/pixel/format_fwd.hpp
	libs/image/include/sge/image/traits/pixel/format_stride.hpp
	libs/image/include/sge/image/traits/pixel/format_stride_tpl_fwd.hpp
	libs/image/include/sge/image/traits/pixel/format_to_string.hpp
	libs/image/include/sge/image/traits/pixel/format_to_string_tpl_fwd.hpp
	libs/image/include/sge/image/traits/pixel/format_tpl_fwd.hpp
	libs/image/include/sge/image/traits/pixel/static_formats.hpp
	libs/image/include/sge/image/traits/pixel/static_formats_tpl_fwd.hpp
	libs/image/include/sge/image/view/basic_elements.hpp
	libs/image/include/sge/image/view/basic_format.hpp
	libs/image/include/sge/image/view/basic_format_c.hpp
	libs/image/include/sge/image/view/checked_sub.hpp
	libs/image/include/sge/image/view/const_elements.hpp
	libs/image/include/sge/image/view/const_object.hpp
	libs/image/include/sge/image/view/const_object_fwd.hpp
	libs/image/include/sge/image/view/data.hpp
	libs/image/include/sge/image/view/declare_const_object.hpp
	libs/image/include/sge/image/view/declare_flipped.hpp
	libs/image/include/sge/image/view/declare_format.hpp
	libs/image/include/sge/image/view/declare_make.hpp
	libs/image/include/sge/image/view/declare_object.hpp
	libs/image/include/sge/image/view/declare_size.hpp
	libs/image/include/sge/image/view/declare_sub.hpp
	libs/image/include/sge/image/view/declare_sub_out_of_range.hpp
	libs/image/include/sge/image/view/declare_to_const.hpp
	libs/image/include/sge/image/view/elements.hpp
	libs/image/include/sge/image/view/flipped.hpp
	libs/image/include/sge/image/view/format.hpp
	libs/image/include/sge/image/view/make.hpp
	libs/image/include/sge/image/view/make_const.hpp
	libs/image/include/sge/image/view/mizuiro_access.hpp
	libs/image/include/sge/image/view/mizuiro_traits.hpp
	libs/image/include/sge/image/view/mizuiro_type.hpp
	libs/image/include/sge/image/view/mizuiro_type_fwd.hpp
	libs/image/include/sge/image/view/object.hpp
	libs/image/include/sge/image/view/object_fwd.hpp
	libs/image/include/sge/image/view/pitch.hpp
	libs/image/include/sge/image/view/size.hpp
	libs/image/include/sge/image/view/sub.hpp
	libs/image/include/sge/image/view/sub_out_of_range.hpp
	libs/image/include/sge/image/view/sub_out_of_range_fwd.hpp
	libs/image/include/sge/image/view/to_const.hpp
	libs/image/include/sge/image/view/to_wrapped_type.hpp
	libs/image/include/sge/image/view/to_wrapped_type_fwd.hpp
	libs/image/include/sge/image/view/wrap.hpp
	libs/image/src/image/exception.cpp
)

find_package(
	mizuiro
	REQUIRED
)

option(
	ENABLE_STATIC_COPY_AND_CONVERT
	"Use static copy and convert which will produce bigger but probably faster code"
	OFF
)

if(
	ENABLE_STATIC_COPY_AND_CONVERT
)
	SET(
		SGE_IMAGE_STATIC_COPY_AND_CONVERT
		TRUE
	)
endif()

configure_file(
	${CMAKE_CURRENT_SOURCE_DIR}/config.hpp.in
	${CMAKE_CURRENT_BINARY_DIR}/include/sge/image/impl/config.hpp
)

sge_generate_instantiate_symbol_header(
	image
)

add_sge_base_library(
	image
	HAS_IMPL_DIR
	SGE_DEPS
		sgecore
	TRANSITIVE_SGE_DEPS
		sgecore
	USE_IMPL_INCLUDE_OF
		core
	ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		mizuiro_interface
	TRANSITIVE_ADDITIONAL_DEPS
		${fcppt_core_TARGET}
		fcppt_boost_interface
		mizuiro_interface
	INCLUDE_DIRS
		"${CMAKE_CURRENT_BINARY_DIR}/include"
)
