set(
	SGE_IMAGE2D_FILES
	libs/image2d/impl/include/sge/image2d/impl/log_name.hpp
	libs/image2d/impl/src/image2d/impl/log_name.cpp
	libs/image2d/include/sge/image2d/a8_format.hpp
	libs/image2d/include/sge/image2d/algorithm/clone.hpp
	libs/image2d/include/sge/image2d/algorithm/compare.hpp
	libs/image2d/include/sge/image2d/algorithm/copy.hpp
	libs/image2d/include/sge/image2d/algorithm/copy_and_convert.hpp
	libs/image2d/include/sge/image2d/algorithm/fill.hpp
	libs/image2d/include/sge/image2d/algorithm/print.hpp
	libs/image2d/include/sge/image2d/bgr32f_format.hpp
	libs/image2d/include/sge/image2d/bgr8_format.hpp
	libs/image2d/include/sge/image2d/bgra32f_format.hpp
	libs/image2d/include/sge/image2d/bgra8_format.hpp
	libs/image2d/include/sge/image2d/bgrx8_format.hpp
	libs/image2d/include/sge/image2d/create_exn.hpp
	libs/image2d/include/sge/image2d/dim.hpp
	libs/image2d/include/sge/image2d/dim_fwd.hpp
	libs/image2d/include/sge/image2d/exception.hpp
	libs/image2d/include/sge/image2d/exception_fwd.hpp
	libs/image2d/include/sge/image2d/file.hpp
	libs/image2d/include/sge/image2d/file_exception.hpp
	libs/image2d/include/sge/image2d/file_exception_fwd.hpp
	libs/image2d/include/sge/image2d/file_fwd.hpp
	libs/image2d/include/sge/image2d/file_unique_ptr.hpp
	libs/image2d/include/sge/image2d/l8_format.hpp
	libs/image2d/include/sge/image2d/la8_format.hpp
	libs/image2d/include/sge/image2d/load.hpp
	libs/image2d/include/sge/image2d/load_exn.hpp
	libs/image2d/include/sge/image2d/load_raw_exn.hpp
	libs/image2d/include/sge/image2d/load_stream_result.hpp
	libs/image2d/include/sge/image2d/load_stream_result_fwd.hpp
	libs/image2d/include/sge/image2d/log_location.hpp
	libs/image2d/include/sge/image2d/multi_system.hpp
	libs/image2d/include/sge/image2d/multi_system_fwd.hpp
	libs/image2d/include/sge/image2d/multi_system_parameters.hpp
	libs/image2d/include/sge/image2d/multi_system_parameters_fwd.hpp
	libs/image2d/include/sge/image2d/optional_file_unique_ptr.hpp
	libs/image2d/include/sge/image2d/optional_file_unique_ptr_fwd.hpp
	libs/image2d/include/sge/image2d/pitch.hpp
	libs/image2d/include/sge/image2d/pitch_fwd.hpp
	libs/image2d/include/sge/image2d/plugin/collection.hpp
	libs/image2d/include/sge/image2d/plugin/collection_fwd.hpp
	libs/image2d/include/sge/image2d/plugin/context.hpp
	libs/image2d/include/sge/image2d/plugin/context_fwd.hpp
	libs/image2d/include/sge/image2d/plugin/iterator.hpp
	libs/image2d/include/sge/image2d/plugin/iterator_fwd.hpp
	libs/image2d/include/sge/image2d/plugin/object.hpp
	libs/image2d/include/sge/image2d/plugin/object_fwd.hpp
	libs/image2d/include/sge/image2d/plugin/traits.hpp
	libs/image2d/include/sge/image2d/r32f_format.hpp
	libs/image2d/include/sge/image2d/rect.hpp
	libs/image2d/include/sge/image2d/rect_fwd.hpp
	libs/image2d/include/sge/image2d/rgb32f_format.hpp
	libs/image2d/include/sge/image2d/rgb8_format.hpp
	libs/image2d/include/sge/image2d/rgba32f_format.hpp
	libs/image2d/include/sge/image2d/rgba8_format.hpp
	libs/image2d/include/sge/image2d/rgbx8_format.hpp
	libs/image2d/include/sge/image2d/save_from_view.hpp
	libs/image2d/include/sge/image2d/sbgr8_format.hpp
	libs/image2d/include/sge/image2d/sbgra8_format.hpp
	libs/image2d/include/sge/image2d/srgb8_format.hpp
	libs/image2d/include/sge/image2d/srgba8_format.hpp
	libs/image2d/include/sge/image2d/store/a8.hpp
	libs/image2d/include/sge/image2d/store/a8_fwd.hpp
	libs/image2d/include/sge/image2d/store/bgr32f.hpp
	libs/image2d/include/sge/image2d/store/bgr32f_fwd.hpp
	libs/image2d/include/sge/image2d/store/bgr8.hpp
	libs/image2d/include/sge/image2d/store/bgr8_fwd.hpp
	libs/image2d/include/sge/image2d/store/bgra32f.hpp
	libs/image2d/include/sge/image2d/store/bgra32f_fwd.hpp
	libs/image2d/include/sge/image2d/store/bgra8.hpp
	libs/image2d/include/sge/image2d/store/bgra8_fwd.hpp
	libs/image2d/include/sge/image2d/store/bgrx8.hpp
	libs/image2d/include/sge/image2d/store/bgrx8_fwd.hpp
	libs/image2d/include/sge/image2d/store/l8.hpp
	libs/image2d/include/sge/image2d/store/l8_fwd.hpp
	libs/image2d/include/sge/image2d/store/la8.hpp
	libs/image2d/include/sge/image2d/store/la8_fwd.hpp
	libs/image2d/include/sge/image2d/store/object.hpp
	libs/image2d/include/sge/image2d/store/object_fwd.hpp
	libs/image2d/include/sge/image2d/store/r32f.hpp
	libs/image2d/include/sge/image2d/store/r32f_fwd.hpp
	libs/image2d/include/sge/image2d/store/rgb32f.hpp
	libs/image2d/include/sge/image2d/store/rgb32f_fwd.hpp
	libs/image2d/include/sge/image2d/store/rgb8.hpp
	libs/image2d/include/sge/image2d/store/rgb8_fwd.hpp
	libs/image2d/include/sge/image2d/store/rgba32f.hpp
	libs/image2d/include/sge/image2d/store/rgba32f_fwd.hpp
	libs/image2d/include/sge/image2d/store/rgba8.hpp
	libs/image2d/include/sge/image2d/store/rgba8_fwd.hpp
	libs/image2d/include/sge/image2d/store/rgbx8.hpp
	libs/image2d/include/sge/image2d/store/rgbx8_fwd.hpp
	libs/image2d/include/sge/image2d/store/sbgr8.hpp
	libs/image2d/include/sge/image2d/store/sbgr8_fwd.hpp
	libs/image2d/include/sge/image2d/store/sbgra8.hpp
	libs/image2d/include/sge/image2d/store/sbgra8_fwd.hpp
	libs/image2d/include/sge/image2d/store/srgb8.hpp
	libs/image2d/include/sge/image2d/store/srgb8_fwd.hpp
	libs/image2d/include/sge/image2d/store/srgba8.hpp
	libs/image2d/include/sge/image2d/store/srgba8_fwd.hpp
	libs/image2d/include/sge/image2d/store/view.hpp
	libs/image2d/include/sge/image2d/system.hpp
	libs/image2d/include/sge/image2d/system_fwd.hpp
	libs/image2d/include/sge/image2d/system_unique_ptr.hpp
	libs/image2d/include/sge/image2d/tag.hpp
	libs/image2d/include/sge/image2d/traits/color_tag.hpp
	libs/image2d/include/sge/image2d/traits/dimension.hpp
	libs/image2d/include/sge/image2d/vector.hpp
	libs/image2d/include/sge/image2d/vector_fwd.hpp
	libs/image2d/include/sge/image2d/view/checked_sub.hpp
	libs/image2d/include/sge/image2d/view/const_object.hpp
	libs/image2d/include/sge/image2d/view/const_object_fwd.hpp
	libs/image2d/include/sge/image2d/view/data.hpp
	libs/image2d/include/sge/image2d/view/flipped.hpp
	libs/image2d/include/sge/image2d/view/format.hpp
	libs/image2d/include/sge/image2d/view/make.hpp
	libs/image2d/include/sge/image2d/view/make_const.hpp
	libs/image2d/include/sge/image2d/view/object.hpp
	libs/image2d/include/sge/image2d/view/object_fwd.hpp
	libs/image2d/include/sge/image2d/view/pitch.hpp
	libs/image2d/include/sge/image2d/view/size.hpp
	libs/image2d/include/sge/image2d/view/sub.hpp
	libs/image2d/include/sge/image2d/view/sub_out_of_range.hpp
	libs/image2d/include/sge/image2d/view/to_const.hpp
	libs/image2d/src/image2d/algorithm/clone.cpp
	libs/image2d/src/image2d/algorithm/compare.cpp
	libs/image2d/src/image2d/algorithm/copy.cpp
	libs/image2d/src/image2d/algorithm/copy_and_convert.cpp
	libs/image2d/src/image2d/algorithm/fill.cpp
	libs/image2d/src/image2d/algorithm/print.cpp
	libs/image2d/src/image2d/create_exn.cpp
	libs/image2d/src/image2d/exception.cpp
	libs/image2d/src/image2d/file.cpp
	libs/image2d/src/image2d/file_exception.cpp
	libs/image2d/src/image2d/load.cpp
	libs/image2d/src/image2d/load_exn.cpp
	libs/image2d/src/image2d/load_raw_exn.cpp
	libs/image2d/src/image2d/log_location.cpp
	libs/image2d/src/image2d/multi_system.cpp
	libs/image2d/src/image2d/multi_system_parameters.cpp
	libs/image2d/src/image2d/plugin/collection.cpp
	libs/image2d/src/image2d/plugin/context.cpp
	libs/image2d/src/image2d/plugin/from_loader_function.cpp
	libs/image2d/src/image2d/plugin/iterator.cpp
	libs/image2d/src/image2d/plugin/manager.cpp
	libs/image2d/src/image2d/plugin/object.cpp
	libs/image2d/src/image2d/plugin/traits.cpp
	libs/image2d/src/image2d/save_from_view.cpp
	libs/image2d/src/image2d/store/a8.cpp
	libs/image2d/src/image2d/store/bgr32f.cpp
	libs/image2d/src/image2d/store/bgr8.cpp
	libs/image2d/src/image2d/store/bgra32f.cpp
	libs/image2d/src/image2d/store/bgra8.cpp
	libs/image2d/src/image2d/store/bgrx8.cpp
	libs/image2d/src/image2d/store/l8.cpp
	libs/image2d/src/image2d/store/la8.cpp
	libs/image2d/src/image2d/store/object.cpp
	libs/image2d/src/image2d/store/r32f.cpp
	libs/image2d/src/image2d/store/rgb32.cpp
	libs/image2d/src/image2d/store/rgb8.cpp
	libs/image2d/src/image2d/store/rgba32f.cpp
	libs/image2d/src/image2d/store/rgba8.cpp
	libs/image2d/src/image2d/store/rgbx8.cpp
	libs/image2d/src/image2d/store/sbgr8.cpp
	libs/image2d/src/image2d/store/sbgra8.cpp
	libs/image2d/src/image2d/store/srgb8.cpp
	libs/image2d/src/image2d/store/srgba8.cpp
	libs/image2d/src/image2d/store/view.cpp
	libs/image2d/src/image2d/system.cpp
	libs/image2d/src/image2d/view/checked_sub.cpp
	libs/image2d/src/image2d/view/const_object.cpp
	libs/image2d/src/image2d/view/data.cpp
	libs/image2d/src/image2d/view/flipped.cpp
	libs/image2d/src/image2d/view/format.cpp
	libs/image2d/src/image2d/view/make.cpp
	libs/image2d/src/image2d/view/make_const.cpp
	libs/image2d/src/image2d/view/object.cpp
	libs/image2d/src/image2d/view/pitch.cpp
	libs/image2d/src/image2d/view/size.cpp
	libs/image2d/src/image2d/view/sub.cpp
	libs/image2d/src/image2d/view/sub_out_of_range.cpp
	libs/image2d/src/image2d/view/to_const.cpp
)

find_package(
	mizuiro
	REQUIRED
)

add_sge_base_library(
	image2d
	HAS_IMPL_DIR
	SGE_DEPS
		sgeimage
		sgeimagecolor
		sgelog
		sgemedia
		sgeplugin
	TRANSITIVE_SGE_DEPS
		sgeimage_interface
		sgeimagecolor_interface
		sgemedia_interface
		sgeplugin_interface
	USE_IMPL_INCLUDE_OF
		core
	ADDITIONAL_DEPS
		fcppt_core_interface
	TRANSITIVE_ADDITIONAL_DEPS
		mizuiro_interface
		fcppt_core_interface
		fcppt_log_interface
	INCLUDE_DIRS
		"${FCPPT_UTILS_PROJECT_BINARY_DIR}/libs/image/include"
	IMPLEMENT_FROM
		image
		media
		plugin
	USE_IMPL_INCLUDE_OF
		imagecolor
)
