set(
	SGE_IMAGE3D_FILES
	libs/image3d/include/sge/image3d/a8_format.hpp
	libs/image3d/include/sge/image3d/algorithm/clone.hpp
	libs/image3d/include/sge/image3d/algorithm/compare.hpp
	libs/image3d/include/sge/image3d/algorithm/copy.hpp
	libs/image3d/include/sge/image3d/algorithm/copy_and_convert.hpp
	libs/image3d/include/sge/image3d/algorithm/fill.hpp
	libs/image3d/include/sge/image3d/algorithm/invalid_copy.hpp
	libs/image3d/include/sge/image3d/algorithm/print.hpp
	libs/image3d/include/sge/image3d/bgr32f_format.hpp
	libs/image3d/include/sge/image3d/bgr8_format.hpp
	libs/image3d/include/sge/image3d/bgra32f_format.hpp
	libs/image3d/include/sge/image3d/bgra8_format.hpp
	libs/image3d/include/sge/image3d/bgrx8_format.hpp
	libs/image3d/include/sge/image3d/box.hpp
	libs/image3d/include/sge/image3d/box_fwd.hpp
	libs/image3d/include/sge/image3d/dim.hpp
	libs/image3d/include/sge/image3d/dim_fwd.hpp
	libs/image3d/include/sge/image3d/l8_format.hpp
	libs/image3d/include/sge/image3d/la8_format.hpp
	libs/image3d/include/sge/image3d/pitch.hpp
	libs/image3d/include/sge/image3d/pitch_fwd.hpp
	libs/image3d/include/sge/image3d/r32f_format.hpp
	libs/image3d/include/sge/image3d/rgb32f_format.hpp
	libs/image3d/include/sge/image3d/rgb8_format.hpp
	libs/image3d/include/sge/image3d/rgba32f_format.hpp
	libs/image3d/include/sge/image3d/rgba8_format.hpp
	libs/image3d/include/sge/image3d/rgbx8_format.hpp
	libs/image3d/include/sge/image3d/sbgr8_format.hpp
	libs/image3d/include/sge/image3d/sbgra8_format.hpp
	libs/image3d/include/sge/image3d/srgb8_format.hpp
	libs/image3d/include/sge/image3d/srgba8_format.hpp
	libs/image3d/include/sge/image3d/store/a8.hpp
	libs/image3d/include/sge/image3d/store/a8_fwd.hpp
	libs/image3d/include/sge/image3d/store/bgr32f.hpp
	libs/image3d/include/sge/image3d/store/bgr32f_fwd.hpp
	libs/image3d/include/sge/image3d/store/bgr8.hpp
	libs/image3d/include/sge/image3d/store/bgr8_fwd.hpp
	libs/image3d/include/sge/image3d/store/bgra32f.hpp
	libs/image3d/include/sge/image3d/store/bgra32f_fwd.hpp
	libs/image3d/include/sge/image3d/store/bgra8.hpp
	libs/image3d/include/sge/image3d/store/bgra8_fwd.hpp
	libs/image3d/include/sge/image3d/store/bgrx8.hpp
	libs/image3d/include/sge/image3d/store/bgrx8_fwd.hpp
	libs/image3d/include/sge/image3d/store/element.hpp
	libs/image3d/include/sge/image3d/store/elements.hpp
	libs/image3d/include/sge/image3d/store/elements_wrapper.hpp
	libs/image3d/include/sge/image3d/store/elements_wrapper_fwd.hpp
	libs/image3d/include/sge/image3d/store/l8.hpp
	libs/image3d/include/sge/image3d/store/l8_fwd.hpp
	libs/image3d/include/sge/image3d/store/la8.hpp
	libs/image3d/include/sge/image3d/store/la8_fwd.hpp
	libs/image3d/include/sge/image3d/store/object.hpp
	libs/image3d/include/sge/image3d/store/object_fwd.hpp
	libs/image3d/include/sge/image3d/store/r32f.hpp
	libs/image3d/include/sge/image3d/store/r32f_fwd.hpp
	libs/image3d/include/sge/image3d/store/rgb32f.hpp
	libs/image3d/include/sge/image3d/store/rgb32f_fwd.hpp
	libs/image3d/include/sge/image3d/store/rgb8.hpp
	libs/image3d/include/sge/image3d/store/rgb8_fwd.hpp
	libs/image3d/include/sge/image3d/store/rgba32f.hpp
	libs/image3d/include/sge/image3d/store/rgba32f_fwd.hpp
	libs/image3d/include/sge/image3d/store/rgba8.hpp
	libs/image3d/include/sge/image3d/store/rgba8_fwd.hpp
	libs/image3d/include/sge/image3d/store/rgbx8.hpp
	libs/image3d/include/sge/image3d/store/rgbx8_fwd.hpp
	libs/image3d/include/sge/image3d/store/sbgr8.hpp
	libs/image3d/include/sge/image3d/store/sbgr8_fwd.hpp
	libs/image3d/include/sge/image3d/store/sbgra8.hpp
	libs/image3d/include/sge/image3d/store/sbgra8_fwd.hpp
	libs/image3d/include/sge/image3d/store/srgb8.hpp
	libs/image3d/include/sge/image3d/store/srgb8_fwd.hpp
	libs/image3d/include/sge/image3d/store/srgba8.hpp
	libs/image3d/include/sge/image3d/store/srgba8_fwd.hpp
	libs/image3d/include/sge/image3d/store/view.hpp
	libs/image3d/include/sge/image3d/tag.hpp
	libs/image3d/include/sge/image3d/traits/box_fwd.hpp
	libs/image3d/include/sge/image3d/traits/color_tag.hpp
	libs/image3d/include/sge/image3d/traits/const_view_fwd.hpp
	libs/image3d/include/sge/image3d/traits/dim_fwd.hpp
	libs/image3d/include/sge/image3d/traits/pitch_fwd.hpp
	libs/image3d/include/sge/image3d/traits/store_fwd.hpp
	libs/image3d/include/sge/image3d/traits/sub_out_of_range.hpp
	libs/image3d/include/sge/image3d/traits/view_elements.hpp
	libs/image3d/include/sge/image3d/traits/view_fwd.hpp
	libs/image3d/include/sge/image3d/transform_elements.hpp
	libs/image3d/include/sge/image3d/view/checked_sub.hpp
	libs/image3d/include/sge/image3d/view/const_element.hpp
	libs/image3d/include/sge/image3d/view/const_elements.hpp
	libs/image3d/include/sge/image3d/view/const_elements_wrapper.hpp
	libs/image3d/include/sge/image3d/view/const_elements_wrapper_fwd.hpp
	libs/image3d/include/sge/image3d/view/const_object.hpp
	libs/image3d/include/sge/image3d/view/const_object_fwd.hpp
	libs/image3d/include/sge/image3d/view/data.hpp
	libs/image3d/include/sge/image3d/view/element.hpp
	libs/image3d/include/sge/image3d/view/element_base.hpp
	libs/image3d/include/sge/image3d/view/elements.hpp
	libs/image3d/include/sge/image3d/view/elements_wrapper.hpp
	libs/image3d/include/sge/image3d/view/elements_wrapper_fwd.hpp
	libs/image3d/include/sge/image3d/view/flipped.hpp
	libs/image3d/include/sge/image3d/view/format.hpp
	libs/image3d/include/sge/image3d/view/get.hpp
	libs/image3d/include/sge/image3d/view/make.hpp
	libs/image3d/include/sge/image3d/view/make_const.hpp
	libs/image3d/include/sge/image3d/view/object.hpp
	libs/image3d/include/sge/image3d/view/object_fwd.hpp
	libs/image3d/include/sge/image3d/view/pitch.hpp
	libs/image3d/include/sge/image3d/view/size.hpp
	libs/image3d/include/sge/image3d/view/sub.hpp
	libs/image3d/include/sge/image3d/view/sub_out_of_range.hpp
	libs/image3d/include/sge/image3d/view/to_const.hpp
	libs/image3d/src/image3d/algorithm/clone.cpp
	libs/image3d/src/image3d/algorithm/compare.cpp
	libs/image3d/src/image3d/algorithm/copy.cpp
	libs/image3d/src/image3d/algorithm/copy_and_convert.cpp
	libs/image3d/src/image3d/algorithm/fill.cpp
	libs/image3d/src/image3d/algorithm/print.cpp
	libs/image3d/src/image3d/store/a8.cpp
	libs/image3d/src/image3d/store/bgr32f.cpp
	libs/image3d/src/image3d/store/bgr8.cpp
	libs/image3d/src/image3d/store/bgra32f.cpp
	libs/image3d/src/image3d/store/bgra8.cpp
	libs/image3d/src/image3d/store/bgrx8.cpp
	libs/image3d/src/image3d/store/l8.cpp
	libs/image3d/src/image3d/store/la8.cpp
	libs/image3d/src/image3d/store/object.cpp
	libs/image3d/src/image3d/store/r32f.cpp
	libs/image3d/src/image3d/store/rgb32.cpp
	libs/image3d/src/image3d/store/rgb8.cpp
	libs/image3d/src/image3d/store/rgba32f.cpp
	libs/image3d/src/image3d/store/rgba8.cpp
	libs/image3d/src/image3d/store/rgbx8.cpp
	libs/image3d/src/image3d/store/sbgr8.cpp
	libs/image3d/src/image3d/store/sbgra8.cpp
	libs/image3d/src/image3d/store/srgb8.cpp
	libs/image3d/src/image3d/store/srgba8.cpp
	libs/image3d/src/image3d/store/view.cpp
	libs/image3d/src/image3d/view/checked_sub.cpp
	libs/image3d/src/image3d/view/const_object.cpp
	libs/image3d/src/image3d/view/data.cpp
	libs/image3d/src/image3d/view/flipped.cpp
	libs/image3d/src/image3d/view/format.cpp
	libs/image3d/src/image3d/view/get.cpp
	libs/image3d/src/image3d/view/make.cpp
	libs/image3d/src/image3d/view/make_const.cpp
	libs/image3d/src/image3d/view/object.cpp
	libs/image3d/src/image3d/view/pitch.cpp
	libs/image3d/src/image3d/view/size.cpp
	libs/image3d/src/image3d/view/sub.cpp
	libs/image3d/src/image3d/view/sub_out_of_range.cpp
	libs/image3d/src/image3d/view/to_const.cpp
)

find_package(
	mizuiro
	REQUIRED
)

add_sge_base_library(
	image3d
	SGE_DEPS
		sgeimage
		sgeimagecolor
	TRANSITIVE_SGE_DEPS
		sgeimage_interface
		sgeimagecolor_interface
	ADDITIONAL_DEPS
		fcppt_core_interface
	TRANSITIVE_ADDITIONAL_DEPS
		mizuiro_interface
		fcppt_core_interface
	INCLUDE_DIRS
		"${FCPPT_UTILS_PROJECT_BINARY_DIR}/libs/image/include"
	IMPLEMENT_FROM
		image
	USE_IMPL_INCLUDE_OF
		imagecolor
)
